# Chorus

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
deploy/: rebuild.sh  run.sh
docs/: AGENT_LIFECYCLE.md  ARCHITECTURE.md  COMMANDS.md  PERMISSIONS.md
docs/backlog/: claude-code-sdk-integration.md
docs/discussions/: 2026-02-14-cost-optimization-and-architecture.md
docs/todo/: 001-core-bot.md  002-agent-manager.md  003-permission-profiles.md  004-file-tools.md  005-bash-execution.md  006-execution-threads.md  006-git-integration.md  007-context-management.md  008-llm-integration.md  009-default-settings.md  010-agent-self-edit.md  011-voice-agent.md  012-webhooks.md  013-agent-communication.md  014-process-management.md  015-process-hooks.md  016-live-testing.md  017-live-status-feedback.md  018-planning-mode.md  019-system-prompt-refinement.md  020-web-search.md  021-file-editing-refinements.md  022-tool-call-chain-optimization.md  023-prompt-caching.md  024-simplified-branch-routing.md  025-message-chunking.md  026-agent-cost-optimization.md  027-codex-responses-api.md  028-claude-code-integration.md  029-sub-agents.md  030-process-management.md  031-process-hooks.md  032-process-runner-tools.md  033-remove-hardcoded-paths.md
src/chorus/: __main__.py  bot.py  config.py  db_shell.py  models.py
template/: agent.json
template/docs/: README.md
tests/: conftest.py  test_bot.py  test_config.py  test_db_shell.py  test_models.py
tests/test_agent/: test_communication.py  test_context.py  (+5 more)
(+83 files in other folders)
