[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorus"
version = "0.1.0"
description = "Multi-agent Discord workspace — each channel is an autonomous AI agent"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3",
    "anthropic>=0.39",
    "openai>=1.50",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
packages = ["chorus"]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
